samples/_failures_safe/1761040396_edfc68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52995a81.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_52995a81.c:153:15: error: expected ‘;’ at end of input
  153 |         parser
      |               ^
      |               ;
./samples/SAFE/__tmp_52995a81.c:153:9: error: expected declaration or statement at end of input
  153 |         parser
      |         ^~~~~~
./samples/SAFE/__tmp_52995a81.c:153:9: error: expected declaration or statement at end of input
